# antifollowbots

./: Cargo.toml  ConfigExample.toml
migrations/: 20230403225455_initial_tables.sql  20230404014619_i_forgor_sessions.sql
src/: config.rs  db.rs  main.rs  models.rs  request_models.rs  sessions.rs
src/routes/: github.rs  mod.rs
